to fix bug 1575.